<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.davidrmz.usuarios.MainActivity">
    <!--- Nombre Completo-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/MaterialDesignLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/editTxtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Nombre"/>

    </android.support.design.widget.TextInputLayout>
   <!---Fecha Picker -->
    <DatePicker
        android:id="@+id/datePicker2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/MaterialDesignLayout1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
         />
    <!--- Telefono -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/datePicker2">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editTxtTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Telefono"/>
    </android.support.design.widget.TextInputLayout>
    <!--- Email -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInputLayout2">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editTxtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email"/>
    </android.support.design.widget.TextInputLayout>
    <!--- Descripcion -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInputLayout3">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editTxtDescrip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Descripcion"/>
    </android.support.design.widget.TextInputLayout>
    <!--Boton Siguiente-->
    <Button
        android:id="@+id/botonSig"
        android:text="@string/BotonSig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grayDark"
        android:layout_below="@id/textInputLayout4"
         />

</RelativeLayout>
